kubernetes/catalog/jackett/manifests/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jackett
  namespace: jackett
  labels:
    app.kubernetes.io/name: jackett
    infraweaver.io/source: community-apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`jackett.int.rlservers.com`)
      kind: Rule
      middlewares:
        - name: netbird-vpn-only
          namespace: traefik
      services:
        - name: jackett
          port: 9117
  tls:
    store:
      name: default
      namespace: traefik
